@@ -49,7 +49,7 @@ class CasesFunctionalTest extends FunctionalTest {
                 "prosecutors": ["Prosecutor A"],
                 "defenders": ["Defender A"]
             }
-                """;
+            """;
         caseBody = caseBody.replace("<<courthouse>>", COURTHOUSE);
         caseBody = caseBody.replace("<<caseNumber>>", CASE_NUMBER);
 
@@ -112,7 +112,7 @@ class CasesFunctionalTest extends FunctionalTest {
 
         var caseList = response.jsonPath().getList("", ScheduledCase.class);
         assertEquals(1, caseList.size());
-        var firstCase = caseList.get(0);
+        var firstCase = caseList.getFirst();
         assertEquals(CASE_NUMBER, firstCase.getCaseNumber());
     }
 
@@ -123,7 +123,7 @@ class CasesFunctionalTest extends FunctionalTest {
             {
                 "case_number": "<<caseNumber>>"
             }
-                """;
+            """;
 
         caseBody = caseBody.replace("<<caseNumber>>", CASE_NUMBER);
 
@@ -140,7 +140,7 @@ class CasesFunctionalTest extends FunctionalTest {
         assertEquals(200, response.statusCode());
         var caseList = response.jsonPath().getList("", AdvancedSearchResult.class);
         assertEquals(1, caseList.size());
-        var firstCase = caseList.get(0);
+        var firstCase = caseList.getFirst();
         caseId = firstCase.getCaseId();
     }
 
