@@ -53,7 +53,7 @@ class InboundToUnstructuredProcessorIntTest extends IntegrationBase {
         List<MediaEntity> medias = dartsDatabase.getMediaStub().createAndSaveSomeMedias();
 
         //matches because no corresponding unstructured
-        var media1 = medias.get(0);
+        var media1 = medias.getFirst();
         externalObjectDirectoryStub.createAndSaveEod(media1, STORED, INBOUND);
 
         //matches because unstructured failed with no max attempts reached
@@ -101,7 +101,7 @@ class InboundToUnstructuredProcessorIntTest extends IntegrationBase {
         // then
         var createdUnstructuredStored = eodRepository.findByStatusAndType(storedStatus(), unstructuredLocation());
         assertThat(createdUnstructuredStored).hasSize(1);
-        ExternalObjectDirectoryEntity createdUnstructured = createdUnstructuredStored.get(0);
+        ExternalObjectDirectoryEntity createdUnstructured = createdUnstructuredStored.getFirst();
         TranscriptionDocumentEntity createdUnstructuredStoredTranscriptionDocument = transcriptionDocumentRepository.findById(
             createdUnstructured.getTranscriptionDocumentEntity().getId()).get();
         assertThat(createdUnstructuredStoredTranscriptionDocument.getTranscription().getId()).isEqualTo(transcription.getId());
@@ -115,7 +115,7 @@ class InboundToUnstructuredProcessorIntTest extends IntegrationBase {
         dartsDatabase.getTranscriptionStub().updateTranscriptionWithDocument(transcription, STORED, INBOUND, UUID.randomUUID().toString());
 
         dartsDatabase.getExternalObjectDirectoryStub().createAndSaveExternalObjectDirectory(
-            transcription.getTranscriptionDocumentEntities().get(0).getId(),
+            transcription.getTranscriptionDocumentEntities().getFirst().getId(),
             dartsDatabase.getObjectRecordStatusEntity(STORED),
             dartsDatabase.getExternalLocationTypeEntity(UNSTRUCTURED)
         );
@@ -129,7 +129,7 @@ class InboundToUnstructuredProcessorIntTest extends IntegrationBase {
         // then
         var unstructuredAfterProcessing = eodRepository.findByStatusAndType(storedStatus(), unstructuredLocation());
         assertThat(unstructuredAfterProcessing).hasSize(1);
-        assertThat(unstructuredAfterProcessing.get(0).getId()).isEqualTo(unstructuredBeforeProcessing.get(0).getId());
+        assertThat(unstructuredAfterProcessing.getFirst().getId()).isEqualTo(unstructuredBeforeProcessing.getFirst().getId());
     }
 
     @Test
@@ -140,7 +140,7 @@ class InboundToUnstructuredProcessorIntTest extends IntegrationBase {
         dartsDatabase.getTranscriptionStub().updateTranscriptionWithDocument(transcription, STORED, INBOUND, UUID.randomUUID().toString());
 
         dartsDatabase.getExternalObjectDirectoryStub().createAndSaveExternalObjectDirectory(
-            transcription.getTranscriptionDocumentEntities().get(0).getId(),
+            transcription.getTranscriptionDocumentEntities().getFirst().getId(),
             dartsDatabase.getObjectRecordStatusEntity(FAILURE),
             dartsDatabase.getExternalLocationTypeEntity(UNSTRUCTURED)
         );
@@ -154,7 +154,7 @@ class InboundToUnstructuredProcessorIntTest extends IntegrationBase {
         // then
         var unstructuredAfterProcessing = eodRepository.findByStatusAndType(storedStatus(), unstructuredLocation());
         assertThat(unstructuredAfterProcessing).hasSize(1);
-        assertThat(unstructuredAfterProcessing.get(0).getId()).isEqualTo(unstructuredBeforeProcessing.get(0).getId());
+        assertThat(unstructuredAfterProcessing.getFirst().getId()).isEqualTo(unstructuredBeforeProcessing.getFirst().getId());
     }
 
     @Test
@@ -172,6 +172,6 @@ class InboundToUnstructuredProcessorIntTest extends IntegrationBase {
         // then
         var createdUnstructuredFailed = eodRepository.findByStatusAndType(failureStatus(), unstructuredLocation());
         assertThat(createdUnstructuredFailed).hasSize(1);
-        assertThat(createdUnstructuredFailed.get(0).getTransferAttempts()).isEqualTo(1);
+        assertThat(createdUnstructuredFailed.getFirst().getTransferAttempts()).isEqualTo(1);
     }
 }
